fix: burger menu fit to the height, z-indexes after adding projects, move socila icons to the module

--- a/#src/scss/module/_header.scss
+++ b/#src/scss/module/_header.scss
@@ -97,14 +97,17 @@
       width: 35%;
       min-width: 302px;
       max-width: 760px;
-      height: calc(100% - 200px);
+      height: calc(100% - 127px);
       background-color: $background-color;
       transition: right 0.5s ease 0s;
       overflow: auto;
-      z-index: 2;
-      padding: 54px 0 54px 115px;
+      z-index: 4;
+      padding: 54px 18px 54px 115px;
+      @media screen and (max-width: 1919px) {
+        padding: 50px 18px 48px 80px;
+      }
       @media screen and (max-width: 680px) {
-        padding: 46px 0 39px 18px;
+        padding: 46px 18px 39px 18px;
       }
       @media screen and (max-width: 560px) {
         right: -160%;
@@ -115,6 +118,9 @@
       padding-left: 0;
       li:not(:first-child) {
         margin-top: 24px;
+        @media screen and (max-width: 1919px) {
+          margin-top: 20px;
+        }
         @media screen and (max-width: 680px) {
           margin-top: 16px;
         }
@@ -135,46 +141,12 @@
         &.active {
           color: $accent-color;
         }
+        @media screen and (max-width: 1919px) {
+          font-size: 2rem;
+        }
         @media screen and (max-width: 680px) {
           font-size: 1.5rem;
         }
-      }
-    }
-    &__social-list {
-      padding-left: 0;
-      list-style: none;
-      margin-top: 123px;
-      display: flex;
-      justify-content: flex-start;
-      gap: 47px;
-      @media screen and (max-width: 680px) {
-        margin-top: 25px;
-      }
-      a {
-        display: block;
-        font-size: 0px;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background-color: $secondary-bg-color;
-        transition: background-color 0.5s;
-        background-position: center;
-        background-repeat: no-repeat;
-        &:hover {
-          background-color: $accent-color;
-        }
-      }
-      .facebook {
-        background-image: url("../img/facebook-icon.svg");
-      }
-      .telegram {
-        background-image: url("../img/telegram-icon.svg");
-      }
-      .instagram {
-        background-image: url("../img/instagram-icon.svg");
-      }
-      .tiktok {
-        background-image: url("../img/tiktok-icon.svg");
       }
     }
   }
@@ -250,9 +222,13 @@
     top: 128px;
     left: 0;
     background-color: rgba(17, 24, 39, 0.5);
+    z-index: 3;
   }
   .persons {
     margin-top: 82px;
+    @media screen and (max-width: 1919px) {
+      margin-top: 45px;
+    }
     @media screen and (max-width: 680px) {
       margin-top: 0;
     }
@@ -260,15 +236,19 @@
   .person {
     padding-top: 40px;
     padding-bottom: 34px;
+
     &:not(:last-child) {
       border-bottom: solid 1px #D1D1D1;
     }
     h2 {
+      font-size: 1rem;
       font-weight: 700;
       text-transform: uppercase;
     }
     p {
       color: #727272;
+      margin-top: 8px;
+      margin-bottom: 8px;
     }
     a {
       color: $main-font-color;
